<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CallMe</string>

    <!-- Main -->
    <string name="name_hint">Whom to call</string>
    <string name="no_name_error">Please input a sip login of person whom need to call</string>
    <string name="call_button">CALL</string>

    <!-- Call -->
    <string name="call_title">Call</string>
    <string name="call_answer">Answer</string>
    <string name="call_decline">Decline</string>
    <string name="call_end">End</string>

    <!-- Sip -->
    <string name="sip_registration_started">Registration…</string>
    <string name="sip_registration_finished">Registration was successful.\nYour name is %s.</string>
    <string name="sip_registration_error">Registration failed with error #%d</string>
    <string name="sip_call_error">Error was occurred while calling</string>
    <string name="username">username</string>
    <string name="domain">domain</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="title_activity_main2">Sip Caller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_new_message">New Message</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="sip_id">sip_id</string>
</resources>
