<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_new_message"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/menu_new_message"/>
        <item
                android:id="@+id/nav_calls"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_calls"/>
        <item
                android:id="@+id/nav_contacts"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/menu_contacts"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_settings"/>
        <item
                android:id="@+id/nav_about"
                android:icon="?attr/actionModeShareDrawable"
                android:title="@string/menu_about"/>
        <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_sign_out"/>
    </group>
</menu>
